Merge with updated PlayerController;  Expand functionality of Animation class